# algorithm

./: .gitignore  Makefile
LinkedList/: __init__.py  list.py
Tree/dfs/: tree.py
basic/: Makefile  pyproject.toml
basic/src/algorithms/pref_sum/: __init__.py  prefix.py
basic/src/algorithms/sort/: merge.py
basic/tests/: test_prefix_sum.py
basic/tests/test_sort/: test_merge.py
graph/: g.py
pref_sum/: counts_char.py  pref.py
