[project]
name = "basic"
version = "0.1.0"
description = ""
authors = [{ name = "BadGateway5", email = "khabibtime@rambler.ru" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [{ include = "algorithms", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
