[project]
name = "basic"
version = "0.1.0"
description = ""
authors = [{ name = "BadGateway5", email = "khabibtime@rambler.ru" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest (>=8.4.0,<9.0.0)"]

[tool.poetry]
packages = [{ include = "algorithms", from = "src" }]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
